@@ -1,5 +1,9 @@
 2013-12-30  Allen D. Ball  <ball@10-0-1-2.lan>
 
+	* src/main/java/iprotium/upnp/SSDPThread.java:
+	Override ping() to only broadcast a SSDPDiscoveryRequest if the
+	SSDPDiscoveryCache is empty or an entry is about to expire.
+
 	* src/main/java/iprotium/upnp/ssdp/SSDPDiscoveryThread.java:
 	Added ping() method and made interval member protected.
 
